# tokenized-world-model

./: README.md  pyproject.toml
docs/: claims.md  differentiation_from_best_of_n_wam.md  differentiation_from_prior_projects.md  differentiation_from_wam.md  final_audit.md  reviewer_attacks.md  theory.md  v3_execution_plan.md  v4_execution_plan.md
experiments/: run_all.py  v4_cached_evidence.py
paper/: abstract.md  checklist.md  experiments.md  intro.md  limitations.md  method.md  related_work.md  theory.md
paper/final/: tokenized_world_model_v3_manifest.json  tokenized_world_model_v4_manifest.json
paper/iclr/: appendix.tex  build.ps1  main.tex  references.bib  v3_attack_ledger_table.tex  v3_codebook_sweep_table.tex  v3_full_curves_table.tex  v3_results_macros.tex  v3_scorecard_table.tex  v3_tail_autopsy_table.tex  (+5 more)
results/: claims_status.json  claims_status.md  codebook_bottleneck.csv  exact_law_validation.json  learned_vq_artifact.json  metrics_main.csv  summary.json  tail_autopsy.csv  v3_tokenized_attack_ledger.csv  v3_tokenized_evidence_summary.json  v3_tokenized_evidence_summary.md  v3_tokenized_scorecard.csv  v4_cached_evidence_summary.json  v4_cached_evidence_summary.md  v4_iclr_style_rubric_map.csv  v4_protocol_freeze_gates.csv  v4_reviewer_attack_ledger.csv  v4_reviewer_attack_ledger.md  v4_tokenized_submission_scorecard.csv
scripts/: build_v3_paper.py  build_v4_paper.py  prepare_v3_evidence.py  run_all.sh  run_claim_audit.sh  run_smoke.sh  run_v3_claim_audit.py  run_v4_claim_audit.py
tests/: test_audit.py  test_law.py  test_vq_and_repair.py
(+14 files in other folders)
