[project]
name = "token-alias-tail-audit"
version = "0.1.0"
description = "Controlled token-alias tail audits for tokenized world models."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
